--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav class="header-nav">
             <a href="/"><span>Web</span><span>Studio</span></a>
 
-            <ul>
-                <li><a href="/">Студія</a></li>
-                <li><a href="./portfolio.html">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+            <ul class="header-list list">
+                <li class="header-list-item"><a href="/">Студія</a></li>
+                <li class="header-list-item"><a href="./portfolio.html">Портфоліо</a></li>
+                <li class="header-list-item"><a href="">Контакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -28,38 +28,42 @@
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <main>
-        <section>
+    <main class="main">
+        <section class="solutions">
             <h1>Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
-        <section>
-            <ul>
+        <section class="benefits">
+            <ul class="benefits-list list"> 
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <h3 class="benefits-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p class="benefits-list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <h3 class="benefits-list-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <p class="benefits-list-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <h3 class="benefits-list-title">ПЛАНУВАННЯ</h3>
+                    <p class="benefits-list-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3 class="benefits-list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p class="benefits-list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чим ми займаємося</h2>
-            <ul>
-                <li><img src="./images/img1.jpg" alt="Розробка вебсайтів" width="370" height="294"></li>
-                <li><img src="./images/img2.jpg" alt="Створення мобільних додатків" width="370" height="294"></li>
-                <li><img src="./images/img3.jpg" alt="Веб-дизайн" width="370" height="294"></li>
+        <section class="services">
+            <h2 class="services-title title">Чим ми займаємося</h2>
+            <ul class="services-list list">
+                <li class="services-list-item"><img src="./images/img1.jpg" alt="Розробка вебсайтів" width="370" height="294"></li>
+                <li class="services-list-item"><img src="./images/img2.jpg" alt="Створення мобільних додатків" width="370" height="294"></li>
+                <li class="services-list-item"><img src="./images/img3.jpg" alt="Веб-дизайн" width="370" height="294"></li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="team">
+            <h2 class="team-title title">Наша команда</h2>
+            <ul class="team-list list">
                 <li>
                     <img src="./images/img4.jpg" alt="Член команди" width="270" height="260">
                     <h3>Ігор Дем'яненко</h3>
@@ -83,10 +87,10 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <a href="/">WebStudio</a>
-        <address>
-            м. Київ, пр-т Лесі Українки, 26 <br>
+        <address class="address">
+            <span class="address-text">м. Київ, пр-т Лесі Українки, 26</span> <br>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
