--- a/portfolio.html
+++ b/portfolio.html
@@ -1,19 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфоліо</title>
 </head>
+
 <body>
     <header class="header">
-        
+        <nav class="header-nav">
+            <a href="/"><span>Web</span><span>Studio</span></a>
+
+            <ul class="header-list list">
+                <li class="header-list-item"><a href="./index.html">Студія</a></li>
+                <li class="header-list-item"><a href="./portfolio.html">Портфоліо</a></li>
+                <li class="header-list-item"><a href="">Контакти</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <main>
-
+        <section class="projects">
+            <h1 class="projects-title"></h1>
+            <ul class="filter-list list">
+                <li><button type="button" class="filter-button">Усе</button></li>
+                <li><button type="button" class="filter-button">Веб-сайти</button></li>
+                <li><button type="button" class="filter-button">Додатки</button></li>
+                <li><button type="button" class="filter-button">Дизайн</button></li>
+                <li><button type="button" class="filter-button">Маркетинг</button></li>
+            </ul>
+            <ul class="projects-list list">
+                <li><img src="./images/img8.jpg" alt="Веб-сайт" width="370" height="294">
+                    <h2 class="project-title">Технокряк</h2>
+                    <p class="project-text">Веб-сайт</p>
+                </li>
+                <li><img src="./images/img9.jpg" alt="Дизайн" width="370" height="294">
+                    <h2 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                    <p class="project-text">Дизайн</p>
+                </li>
+                <li><img src="./images/img10.jpg" alt="Додаток" width="370" height="294">
+                    <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
+                    <p class="project-text">Додаток</p>
+                </li>
+                <li><img src="./images/img11.jpg" alt="Маркетинг" width="370" height="294">
+                    <h2 class="project-title">Проєкт <span lang="en">Prime</span></h2>
+                    <p class="project-text">Маркетинг</p>
+                </li>
+                <li><img src="./images/img12.jpg" alt="Додаток" width="370" height="294">
+                    <h2 class="project-title">Проєкт <span lang="en">Boxes</span></h2>
+                    <p class="project-text">Додаток</p>
+                </li>
+                <li><img src="./images/img13.jpg" alt="Веб-сайт" width="370" height="294">
+                    <h2 class="project-title"><span lang="en">Inspiration has no Borders</span></h2>
+                    <p class="project-text">Веб-сайт</p>
+                </li>
+                <li><img src="./images/img14.jpg" alt="Дизайн" width="370" height="294">
+                    <h2 class="project-title">Видання <span lang="en">Limited Edition</span></h2>
+                    <p class="project-text">Дизайн</p>
+                </li>
+                <li><img src="./images/img15.jpg" alt="Маркетинг" width="370" height="294">
+                    <h2 class="project-title">Проєкт <span lang="en">LAB</span></h2>
+                    <p class="project-text">Маркетинг</p>
+                </li>
+                <li><img src="./images/img16.jpg" alt="Додаток" width="370" height="294">
+                    <h2 class="project-title"><span lang="en">Growing Business</span></h2>
+                    <p class="project-text">Додаток</p>
+                </li>
+            </ul>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <a href="/">WebStudio</a>
+        <address class="address">
+            <span class="address-text">м. Київ, пр-т Лесі Українки, 26</span> <br>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
     </footer>
 </body>
+
 </html>
