--- a/index.html
+++ b/index.html
@@ -12,43 +12,41 @@
 </head>
 
 <body>
-
     <header class="header">
         <nav class="header-nav">
-            <a href="/"><span>Web</span><span>Studio</span></a>
-
-            <ul class="header-list list">
-                <li class="header-list-item"><a href="/">Студія</a></li>
-                <li class="header-list-item"><a href="./portfolio.html">Портфоліо</a></li>
-                <li class="header-list-item"><a href="">Контакти</a></li>
+            <a href="/" class="logo link"><span class="part-logo">Web</span><span class="header-logo">Studio</span></a>
+            <ul class="nav-list list">
+                <li class="nav-list-item"><a href="/" class="nav-link link active">Студія</a></li>
+                <li class="nav-list-item"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
+                <li class="nav-list-item"><a href="" class="nav-link link">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact-list list">
+            <li class="contact-item"><a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a></li>
+            <li class="contact-item"><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main class="main">
-        <section class="solutions">
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+        <section class="solution">
+            <h1 class="solution-title">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="solution-button">Замовити послугу</button>
         </section>
         <section class="benefits">
             <ul class="benefits-list list"> 
                 <li>
-                    <h3 class="benefits-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3 class="benefits-list-title">Увага до деталей</h3>
                     <p class="benefits-list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3 class="benefits-list-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="benefits-list-title">Пунктуальність</h3>
                     <p class="benefits-list-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3 class="benefits-list-title">ПЛАНУВАННЯ</h3>
+                    <h3 class="benefits-list-title">Планування</h3>
                     <p class="benefits-list-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3 class="benefits-list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3 class="benefits-list-title">Сучасні технології</h3>
                     <p class="benefits-list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
@@ -66,33 +64,33 @@
             <ul class="team-list list">
                 <li>
                     <img src="./images/img4.jpg" alt="Член команди" width="270" height="260">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="team-list-title">Ігор Дем'яненко</h3>
+                    <p lang="en" class="team-list-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img5.jpg" alt="Член команди" width="270" height="260">
-                    <h3>Ольга Рєпіна</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="team-list-title">Ольга Рєпіна</h3>
+                    <p lang="en" class="team-list-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img6.jpg" alt="Член команди" width="270" height="260">
-                    <h3>Микола Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="team-list-title">Микола Тарасов</h3>
+                    <p lang="en" class="team-list-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img7.jpg" alt="Член команди" width="270" height="260">
-                    <h3>Михайло Єрмаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="team-list-title">Михайло Єрмаков</h3>
+                    <p lang="en" class="team-list-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="/">WebStudio</a>
+        <a href="/" class="logo-link"><span class="part-logo">Web</span><span class="footer-logo">Studio</span></a>
         <address class="address">
             <span class="address-text">м. Київ, пр-т Лесі Українки, 26</span> <br>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a><br>
+            <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
         </address>
     </footer>
 
