--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main class="main">
         <section class="solution">
-            <h1 class="solution-title">Ефективні рішення для вашого бізнесу</h1>
+            <h1 class="solution-title">Ефективні рішення для <br> вашого бізнесу</h1>
             <button type="button" class="solution-button">Замовити послугу</button>
         </section>
         <section class="benefits">
@@ -86,7 +86,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="/" class="logo-link"><span class="part-logo">Web</span><span class="footer-logo">Studio</span></a>
+        <a href="/" class="logo link"><span class="part-logo">Web</span><span class="footer-logo">Studio</span></a>
         <address class="address">
             <span class="address-text">м. Київ, пр-т Лесі Українки, 26</span> <br>
             <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a><br>
