--- a/portfolio.html
+++ b/portfolio.html
@@ -77,10 +77,10 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="/" class="logo-link"><span class="part-logo">Web</span><span class="footer-logo">Studio</span></a>
+        <a href="/" class="logo link"><span class="part-logo">Web</span><span class="footer-logo">Studio</span></a>
         <address class="address">
             <span class="address-text">м. Київ, пр-т Лесі Українки, 26</span> <br>
-            <a href="mailto:info@devstudio.com" class="footer-constact link">info@devstudio.com</a><br>
+            <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a><br>
             <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
         </address>
     </footer>
