--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Студія</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <!-- There alse must be css normalize -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
