--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a href="/" class="logo link"><span class="part-logo">Web</span><span class="header-logo">Studio</span></a>
-            <ul class="nav-list list">
+            <a href="/" class="logo"><span class="part-logo">Web</span><span class="header-logo">Studio</span></a>
+            <ul class="nav-list">
                 <li class="nav-list-item"><a href="/" class="nav-link link active">Студія</a></li>
                 <li class="nav-list-item"><a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
                 <li class="nav-list-item"><a href="" class="nav-link link">Контакти</a></li>
             </ul>
         </nav>
-        <ul class="contact-list list">
+        <ul class="contact-list">
             <li class="contact-item"><a href="mailto:info@devstudio.com" class="contact-link link">info@devstudio.com</a></li>
             <li class="contact-item"><a href="tel:+380961111111" class="contact-link link">+38 096 111 11 11</a></li>
         </ul>
@@ -32,7 +32,7 @@
             <button type="button" class="solution-button">Замовити послугу</button>
         </section>
         <section class="benefits">
-            <ul class="benefits-list list"> 
+            <ul class="benefits-list"> 
                 <li>
                     <h3 class="benefits-list-title">Увага до деталей</h3>
                     <p class="benefits-list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -86,7 +86,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="/" class="logo link"><span class="part-logo">Web</span><span class="footer-logo">Studio</span></a>
+        <a href="/" class="logo"><span class="part-logo">Web</span><span class="footer-logo">Studio</span></a>
         <address class="address">
             <span class="address-text">м. Київ, пр-т Лесі Українки, 26</span> <br>
             <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a><br>
